[tool.poetry]
name = "my-poetry-jupyterlab-project"
version = "0.1.0"
description = ""
authors = ["Vladimir Marko <vladimirmarko1988@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
jupyterlab = "^4.2.5"
ipykernel = "^6.29.5"
ipyflow = "^0.0.200"
jupyterlab-lsp = "^5.1.0"
python-lsp-server = {extras = ["all"], version = "^1.12.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "start:start"
